# Change Log

The format is based on [Keep a Changelog](http://keepachangelog.com/).

## [Unreleased]

## [v1.1.9] - Thu, 22 Mar 2018 00:08:41 +0900

### Changed
- 의류준비탭의 입고감 버튼을 '입고감|기록요망|입고감+기록요망' 으로 확장해서 사용 (#168)

## [v1.1.8] - Wed, 21 Mar 2018 08:35:14 +0900

### Changed
- font-awesome js svg 대신에 css web-fonts 를 사용 (#176)

## [v1.1.7] - Mon, 19 Mar 2018 11:14:02 +0900

### Fixed
- 의류수선탭내의 토글버튼의 오동작 개선 (#176)

## [v1.1.6] - Wed, 14 Mar 2018 12:21:13 +0900

### Changed
- Upgrading font-awesome from version 4 to version 5
- 의류준비탭에서 '입고감' 토글 가능하도록 함 (#168)

## [v1.1.5] - Thu, 08 Mar 2018 12:36:47 +0900

### Added
- 방문으로 변경될때에 디버그용 로그 추가
- 방문예약 상태에서만 방문으로 상태를 변경할 수 있도록 예외처리

### Changed
- 취업날개 쿠폰 이용자는 바로 의류준비 상태로 넘어가지 않도록 함 (#175)

## [v1.1.4] - Sat, 03 Mar 2018 12:46:47 +0900

### Changed
- 탈의실이 11개에서 15개로 변경 (#172)

## [v1.1.3] - Thu, 23 Nov 2017 12:29:26 +0900

### Fixed
- typo

## [v1.1.2] - Tue, 21 Nov 2017 14:59:08 +0900

### Changed
- Display avg size instead of clothes-prediction (#165)
- 추천의류를 구하기 위해 평균값을 허리둘레를 사용 (#165)

## [v1.1.1] - Fri, 03 Nov 2017 02:10:33 +0900

### Fixed
- Add exception template for 500 error

## [v1.1.0] - Thu, 02 Nov 2017 16:10:27 +0900

### Added
- dockerize

### Changed
- job queue 의 로그메세지를 명확하게 함 (#161)
- haml 대신 ep 를 사용함

## [v1.0.5] - Wed, 16 Aug 2017 12:40:41 +0900

### Changed
- 구두 또는 타이만 대여할 경우 바로 의류준비 상태로 변경 (#160)

## [v1.0.4] - Fri, 11 Aug 2017 16:48:18 +0900

### Added
- 의류준비탭에 희망하는 지난대여이력을 표시 (#159)

## [v1.0.3] - Thu, 10 Aug 2017 17:02:01 +0900

### Added
- 대리인 대여의 경우 의류준비탭에 표시

## [v1.0.2] - Thu, 01 Jun 2017 15:31:38 +0900
### Changed
- 예약확인 탭의 자동완성 기능 변경

## [v1.0.1] - Thu, 11 May 2017 14:50:13 +0900
### Changed
- 의류준비탭의 탈의실 위치 변경 (#156)

v1.0.0   Fri, 05 May 2017 16:53:39 +0900
  - Naver TTS 를 사용해서 탈의실 입장을 안내함 (#154)

v0.9.9    Mon, 01 May 2017 17:54:42 +0900
  - 예약확인 탭의 안내글 수정 (#148)
  - 예약확인 탭의 스타일 변경 (#148)
  - 예약확인 탭에 숫자 키패드 추가 (#148)

v0.9.8    Wed, 19 Apr 2017 14:44:48 +0900
  - 매 실행마다 job queue reset