@@ -1,0 +1,36 @@
+if: tag IS present
+
+sudo: required
+
+language: perl
+
+services:
+  - docker
+
+install:
+  - echo "Skip install"
+
+script:
+  - echo "Skip test"
+
+after_success:
+  - docker --version
+  - docker build -f Dockerfile        -t opencloset/monitor:$TRAVIS_TAG .
+  - docker build -f Dockerfile.minion -t opencloset/monitor/minion:$TRAVIS_TAG .
+  - docker tag opencloset/monitor:$TRAVIS_TAG        registry.theopencloset.net/opencloset/monitor:$TRAVIS_TAG
+  - docker tag opencloset/monitor:$TRAVIS_TAG        registry.theopencloset.net/opencloset/monitor:latest
+  - docker tag opencloset/monitor/minion:$TRAVIS_TAG registry.theopencloset.net/opencloset/monitor/minion:$TRAVIS_TAG
+  - docker tag opencloset/monitor/minion:$TRAVIS_TAG registry.theopencloset.net/opencloset/monitor/minion:latest
+  - docker push registry.theopencloset.net/opencloset/monitor:$TRAVIS_TAG
+  - docker push registry.theopencloset.net/opencloset/monitor:latest
+  - docker push registry.theopencloset.net/opencloset/monitor/minion:$TRAVIS_TAG
+  - docker push registry.theopencloset.net/opencloset/monitor/minion:latest
+
+notifications:
+  email:
+    recipients:
+      - staff@silex.kr
+    on_success: always # default: change
+    on_failure: always # default: always
+  ## irc 는 동작하지않음
+  ## https://github.com/aanoaa/fake-pause/blob/develop/.travis.yml 참고
