@@ -1,4 +1,4 @@
-FROM opencloset/node:latest as builder
+FROM registry.theopencloset.net/opencloset/node:latest as builder
 MAINTAINER Hyungsuk Hong <aanoaa@gmail.com>
 
 WORKDIR /build
@@ -19,7 +19,7 @@ RUN grunt
 
 
 # https://docs.docker.com/engine/userguide/eng-image/multistage-build/
-FROM opencloset/perl:latest
+FROM registry.theopencloset.net/opencloset/perl:latest
 
 RUN groupadd opencloset && useradd -g opencloset opencloset
 
