@@ -1,5 +1,7 @@
 # Monitor #
 
+[![Build Status](https://travis-ci.org/opencloset/monitor.svg?branch=v1.1.9)](https://travis-ci.org/opencloset/monitor)
+
 Dashboard in waiting room
 
 ## Version ##
