@@ -4,6 +4,9 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/).
 
 ## [Unreleased]
 
+### Added
+- travis-ci 에서 docker image 를 build
+
 ## [v1.1.9] - Thu, 22 Mar 2018 00:08:41 +0900
 
 ### Changed
